syntax = "proto3";

package swapstyle.matching;

option go_package = "github.com/swapstyle/matching/proto";

// ============== MATCHING SERVICE ==============
// Service for AI-powered matching recommendations

service MatchingService {
  // Get recommended garments for a user based on their style profile
  rpc GetRecommendations(RecommendationRequest) returns (RecommendationResponse);

  // Calculate compatibility score between two users
  rpc CalculateCompatibility(CompatibilityRequest) returns (CompatibilityResponse);

  // Update user's style vector after interactions
  rpc UpdateStyleVector(UpdateStyleVectorRequest) returns (UpdateStyleVectorResponse);

  // Get similar garments based on a garment ID
  rpc GetSimilarGarments(SimilarGarmentsRequest) returns (SimilarGarmentsResponse);

  // Batch process swipe patterns for analytics
  rpc ProcessSwipePatterns(stream SwipeEvent) returns (SwipeAnalyticsResponse);
}

// ============== MESSAGES ==============

message RecommendationRequest {
  string user_id = 1;
  int32 limit = 2;
  repeated string exclude_garment_ids = 3;
  RecommendationFilters filters = 4;
}

message RecommendationFilters {
  repeated string categories = 1;
  repeated string sizes = 2;
  repeated string colors = 3;
  float max_distance_km = 4;
  float min_compatibility_score = 5;
}

message RecommendationResponse {
  repeated GarmentRecommendation recommendations = 1;
  string request_id = 2;
}

message GarmentRecommendation {
  string garment_id = 1;
  string user_id = 2;
  float compatibility_score = 3;
  repeated string match_reasons = 4;
  StyleCompatibility style_compatibility = 5;
}

message StyleCompatibility {
  float overall = 1;
  float color_match = 2;
  float style_match = 3;
  float brand_preference = 4;
  float size_match = 5;
}

message CompatibilityRequest {
  string user_id_1 = 1;
  string user_id_2 = 2;
  string garment_id_1 = 3;
  string garment_id_2 = 4;
}

message CompatibilityResponse {
  float overall_score = 1;
  StyleCompatibility style_compatibility = 2;
  float location_score = 3;
  float reputation_score = 4;
  bool recommended_match = 5;
}

message UpdateStyleVectorRequest {
  string user_id = 1;
  repeated InteractionEvent interactions = 2;
}

message InteractionEvent {
  string garment_id = 1;
  InteractionType type = 2;
  int64 timestamp = 3;
  float duration_seconds = 4;
}

enum InteractionType {
  INTERACTION_UNKNOWN = 0;
  INTERACTION_VIEW = 1;
  INTERACTION_SWIPE_LEFT = 2;
  INTERACTION_SWIPE_RIGHT = 3;
  INTERACTION_SUPER_LIKE = 4;
  INTERACTION_MESSAGE = 5;
  INTERACTION_SWAP_COMPLETE = 6;
}

message UpdateStyleVectorResponse {
  bool success = 1;
  repeated float new_style_vector = 2;
  int32 vector_version = 3;
}

message SimilarGarmentsRequest {
  string garment_id = 1;
  int32 limit = 2;
  repeated string exclude_ids = 3;
}

message SimilarGarmentsResponse {
  repeated SimilarGarment garments = 1;
}

message SimilarGarment {
  string garment_id = 1;
  float similarity_score = 2;
  repeated string similar_attributes = 3;
}

message SwipeEvent {
  string user_id = 1;
  string garment_id = 2;
  InteractionType action = 3;
  int64 timestamp = 4;
  float view_duration = 5;
  map<string, string> metadata = 6;
}

message SwipeAnalyticsResponse {
  int32 events_processed = 1;
  map<string, float> category_preferences = 2;
  map<string, float> brand_preferences = 3;
  repeated string trending_items = 4;
}
